# saft

./: .gitignore  Doxyfile  configure.in
doc/user-guide/: saft-user-guide.tex
src/: Makefile.am
src/libmmio/: Makefile.am
src/libsaft/: Makefile.am  safthash.c  safthash.h  saftmatrix.c  saftmatrix.h  saftopt.c  saftopt.h  saftsearch.c  saftsearch.h  saftsequence.c  saftsequence.h  saftspectrum.c  saftspectrum.h  saftstatistictype.h  saftstats.c  saftstats.h
src/saft/: Makefile.am  saftmain.c
src/tests/: Makefile.am  test_args  test_args.out  test_database.faa  test_database.fna  test_harness.c  test_harness.h  test_input.faa  test_input.fna  test_safterror.c  test_saftfasta.c  test_safthash.c  test_saftsearch.c  test_saftsearchenginednaarray.c  test_saftsearchenginednahash.c  test_saftsearchenginegeneric.c  test_saftsearchengines.c  test_saftsequence.c  test_saftstats.c  test_search2seqs.c
